[taotao-cloud-project-1419] add[ test ]